# CppProjectTemplate

./: .gitignore  CMakeLists.txt  make  readme.md  readme_later.md
include/: board.h  utils.h
src/: main.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp  test.h  utils_test.cpp
